--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
 }
 
 .MovieDetails{
-  background-image: url('./bg1.jpg');
+  background-image: url('./bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
